--- a/package.json
+++ b/package.json
@@ -12,28 +12,36 @@
   "keywords": [
     "Socket"
   ],
-  "author": "Yinghua Chai",
+  "author": "Rhythm Shandlya",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
+    "@dinedrop/shared": "^0.0.24",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.2.0",
     "express-validator": "^6.4.0",
+    "helmet": "^7.0.0",
+    "http-status": "^1.6.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "mongoose": "^7.1.1",
     "redis": "^3.0.2",
     "socket.io": "^2.3.0",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.6",
     "@types/crypto-js": "^3.1.44",
+    "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/jwt-decode": "^2.2.1",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.6",
     "@types/redis": "^2.8.18",
     "@types/socket.io": "^2.1.4"
   }
